Criação e configuração do cabeçalho da pagina (mobile First)

--- a/index.html
+++ b/index.html
@@ -6,9 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="img/logo.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/estilo.css">
     <title>Alura Geek</title>
 </head>
 <body>
+    <header class="cabecalho">
+        <h1>
+            <ul class="logo__pagina">
+                <li class="logo__pagina--logo"><img src="img/logo.png" alt="Logo da empresa"></li>
+                <li class="logo__pagina--alura"><img src="img/Alura.png" alt="Logo da empresa"></li>
+                <li class="logo__pagina--geek"><img src="img/Geek.png" alt=""></li>
+            </ul>
+        </h1>
+        <button class="botao__login">Login</button>
+        <img src="img/lupa.png" alt="Lupa de busca">
+    </header>
     
 </body>
 </html>
