--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
         <button class="botao__login">Login</button>
         <img src="img/lupa.png" alt="Lupa de busca">
     </header>
+    <main>
+        <section class="banner">
+            <h1 class="banner__titulo">Dezembro Promocional</h1>
+            <p class="banner__promo">Produtos selecionados com 33% de desconto</p>
+            <button class="banner__botao"><a href="#">Ver Consoles</a></button>
+        </section>
+    </main>
     
 </body>
 </html>
