Criação da seção do star wars com a devida estilização

--- a/index.html
+++ b/index.html
@@ -27,6 +27,39 @@
             <p class="banner__promo">Produtos selecionados com 33% de desconto</p>
             <button class="banner__botao"><a href="#">Ver Consoles</a></button>
         </section>
+
+        <section class="produtos">
+            <article class="produtos__starwars">
+                <h1 class="produtos__titlulo">Star Wars</h1>
+                <button class="produtos__botao"><a href="#">Ver tudo <img src="img/arrow.png" alt=""></a></button>
+                <ul class="produtos__starwars--lista">
+                    <li class="produto">
+                        <img src="img/StarWars__1.png" alt="">
+                        <p class="produto__descricao">Produto XYZ</p>
+                        <p class="produto__preco">R$60,00</p>
+                        <a href="#" class="produto__link">Ver Produto</a>
+                    </li>
+                    <li class="produto">
+                        <img src="img/StarWars__2.png" alt="">
+                        <p class="produto__descricao">Produto XYZ</p>
+                        <p class="produto__preco">R$60,00</p>
+                        <a href="#" class="produto__link">Ver Produto</a>
+                    </li>
+                    <li class="produto">
+                        <img src="img/StarWars__3.png" alt="">
+                        <p class="produto__descricao">Produto XYZ</p>
+                        <p class="produto__preco">R$60,00</p>
+                        <a href="#" class="produto__link">Ver Produto</a>
+                    </li>
+                    <li class="produto">
+                        <img src="img/StarWars__4.png" alt="">
+                        <p class="produto__descricao">Produto XYZ</p>
+                        <p class="produto__preco">R$60,00</p>
+                        <a href="#" class="produto__link">Ver Produto</a>
+                    </li>
+                </ul>
+            </article>
+        </section>
     </main>
     
 </body>
