Adição das seções de console e diversos, aproveitando os CSSs criados para seção Star Wars

--- a/index.html
+++ b/index.html
@@ -29,30 +29,128 @@
         </section>
 
         <section class="produtos">
-            <article class="produtos__starwars">
+            <article class="produtos__starwars secao__produtos">
                 <h1 class="produtos__titlulo">Star Wars</h1>
                 <button class="produtos__botao"><a href="#">Ver tudo <img src="img/arrow.png" alt=""></a></button>
-                <ul class="produtos__starwars--lista">
-                    <li class="produto">
+                <ul class="produtos__lista">
+                    <li class="produto produto__1">
                         <img src="img/StarWars__1.png" alt="">
                         <p class="produto__descricao">Produto XYZ</p>
                         <p class="produto__preco">R$60,00</p>
                         <a href="#" class="produto__link">Ver Produto</a>
                     </li>
-                    <li class="produto">
+                    <li class="produto produto__2">
                         <img src="img/StarWars__2.png" alt="">
                         <p class="produto__descricao">Produto XYZ</p>
                         <p class="produto__preco">R$60,00</p>
                         <a href="#" class="produto__link">Ver Produto</a>
                     </li>
-                    <li class="produto">
+                    <li class="produto produto__3">
                         <img src="img/StarWars__3.png" alt="">
                         <p class="produto__descricao">Produto XYZ</p>
                         <p class="produto__preco">R$60,00</p>
                         <a href="#" class="produto__link">Ver Produto</a>
                     </li>
-                    <li class="produto">
+                    <li class="produto produto__4">
                         <img src="img/StarWars__4.png" alt="">
+                        <p class="produto__descricao">Produto XYZ</p>
+                        <p class="produto__preco">R$60,00</p>
+                        <a href="#" class="produto__link">Ver Produto</a>
+                    </li>
+                    <li class="produto produto__5">
+                        <img src="img/StarWars__5.png" alt="">
+                        <p class="produto__descricao">Produto XYZ</p>
+                        <p class="produto__preco">R$60,00</p>
+                        <a href="#" class="produto__link">Ver Produto</a>
+                    </li>
+                    <li class="produto produto__6">
+                        <img src="img/StarWars__6.png" alt="">
+                        <p class="produto__descricao">Produto XYZ</p>
+                        <p class="produto__preco">R$60,00</p>
+                        <a href="#" class="produto__link">Ver Produto</a>
+                    </li>
+                </ul>
+            </article>
+
+            <article class="produtos__consoles secao__produtos">
+                <h1 class="produtos__titlulo">Consoles</h1>
+                <button class="produtos__botao"><a href="#">Ver tudo <img src="img/arrow.png" alt=""></a></button>
+                <ul class="produtos__lista">
+                    <li class="produto produto__1">
+                        <img src="img/console__1.png" alt="">
+                        <p class="produto__descricao">Produto XYZ</p>
+                        <p class="produto__preco">R$60,00</p>
+                        <a href="#" class="produto__link">Ver Produto</a>
+                    </li>
+                    <li class="produto produto__2">
+                        <img src="img/console__2.png" alt="">
+                        <p class="produto__descricao">Produto XYZ</p>
+                        <p class="produto__preco">R$60,00</p>
+                        <a href="#" class="produto__link">Ver Produto</a>
+                    </li>
+                    <li class="produto produto__3">
+                        <img src="img/console__3.png" alt="">
+                        <p class="produto__descricao">Produto XYZ</p>
+                        <p class="produto__preco">R$60,00</p>
+                        <a href="#" class="produto__link">Ver Produto</a>
+                    </li>
+                    <li class="produto produto__4">
+                        <img src="img/console__4.png" alt="">
+                        <p class="produto__descricao">Produto XYZ</p>
+                        <p class="produto__preco">R$60,00</p>
+                        <a href="#" class="produto__link">Ver Produto</a>
+                    </li>
+                    <li class="produto produto__5">
+                        <img src="img/console__5.png" alt="">
+                        <p class="produto__descricao">Produto XYZ</p>
+                        <p class="produto__preco">R$60,00</p>
+                        <a href="#" class="produto__link">Ver Produto</a>
+                    </li>
+                    <li class="produto produto__6">
+                        <img src="img/console__6.png" alt="">
+                        <p class="produto__descricao">Produto XYZ</p>
+                        <p class="produto__preco">R$60,00</p>
+                        <a href="#" class="produto__link">Ver Produto</a>
+                    </li>
+                </ul>
+            </article>
+
+            <article class="produtos__diversos secao__produtos">
+                <h1 class="produtos__titlulo">Diversos</h1>
+                <button class="produtos__botao"><a href="#">Ver tudo <img src="img/arrow.png" alt=""></a></button>
+                <ul class="produtos__lista">
+                    <li class="produto produto__1">
+                        <img src="img/diversos__1.png" alt="">
+                        <p class="produto__descricao">Produto XYZ</p>
+                        <p class="produto__preco">R$60,00</p>
+                        <a href="#" class="produto__link">Ver Produto</a>
+                    </li>
+                    <li class="produto produto__2">
+                        <img src="img/diversos__2.png" alt="">
+                        <p class="produto__descricao">Produto XYZ</p>
+                        <p class="produto__preco">R$60,00</p>
+                        <a href="#" class="produto__link">Ver Produto</a>
+                    </li>
+                    <li class="produto produto__3">
+                        <img src="img/diversos__3.png" alt="">
+                        <p class="produto__descricao">Produto XYZ</p>
+                        <p class="produto__preco">R$60,00</p>
+                        <a href="#" class="produto__link">Ver Produto</a>
+                    </li>
+                    <li class="produto produto__4">
+                        <img src="img/diversos__4.png" alt="">
+                        <p class="produto__descricao">Produto XYZ</p>
+                        <p class="produto__preco">R$60,00</p>
+                        <a href="#" class="produto__link">Ver Produto</a>
+                    </li>
+                    <li class="produto produto__5">
+                        <img src="img/diversos__5.png" alt="">
+                        <p class="produto__descricao">Produto XYZ</p>
+                        <p class="produto__preco">R$60,00</p>
+                        <a href="#" class="produto__link">Ver Produto</a>
+                    </li>
+                    <li class="produto produto__6">
+                        <img src="img/diversos__6.png" alt="">
                         <p class="produto__descricao">Produto XYZ</p>
                         <p class="produto__preco">R$60,00</p>
                         <a href="#" class="produto__link">Ver Produto</a>
