Adicionando e configurando a lista de links e o fale conosco

--- a/index.html
+++ b/index.html
@@ -159,6 +159,28 @@
             </article>
         </section>
     </main>
+
+    <footer class="rodape">
+        <ul class="lista__link">
+            <li><img src="img/Logo__footer.png" alt="Logo da pagina no rodapé"></li>
+            <li><a href="#">Quem somos nós</a></li>
+            <li><a href="#">Política de privacidade</a></li>
+            <li><a href="#">Programa fidelidade</a></li>
+            <li><a href="#">Nossas lojas</a></li>
+            <li><a href="#">Quero ser franqueado</a></li>
+            <li><a href="#">Anuncie aqui</a></li>
+        </ul>
+
+        <form action="" class="fale__conosco">
+            <h1 class="fale__conosco--titulo">Fale conosco</h1>
+            <label for="nome" class="float__label">Nome</label>
+            <input type="text" name="nome" id="nome" class="nome" required >
+
+            <textarea name="msg" id="msg" cols="30" rows="10" class="input-padrao" required placeholder="Escreva sua mensagem"></textarea>
+
+            <input type="submit" value="Enviar mensagem" class="enviar">
+        </form>
+    </footer>
     
 </body>
 </html>
