--- a/index.html
+++ b/index.html
@@ -181,6 +181,10 @@
             <input type="submit" value="Enviar mensagem" class="enviar">
         </form>
     </footer>
+    <section class="copy">
+        <p>&copy;Desenvolvido por Thaynan Ferreira</p>
+        <p>2022</p>
+    </section>
     
 </body>
 </html>
