Finalização da versão desktop

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="img/logo.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="layout.css">
     <link rel="stylesheet" href="css/estilo.css">
     <title>Alura Geek</title>
 </head>
@@ -167,7 +168,7 @@
 
     <footer class="rodape">
         <ul class="lista__link">
-            <li><img src="img/Logo__footer.png" alt="Logo da pagina no rodapé"></li>
+            <li class="logo__rodape"><img src="img/Logo__footer.png" alt="Logo da pagina no rodapé"></li>
             <li><a href="#">Quem somos nós</a></li>
             <li><a href="#">Política de privacidade</a></li>
             <li><a href="#">Programa fidelidade</a></li>
