Mudança do nome do CSS da pagina index, para diferencia-la das demais

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="img/logo.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="layout.css">
-    <link rel="stylesheet" href="css/estilo.css">
+    <link rel="stylesheet" href="css/estilo__index.css">
     <title>Alura Geek</title>
 </head>
 <body>
@@ -24,7 +24,7 @@
             <input type="text" name="pesquisa" id="pesquisa" class="pesquisa pesquisa__caixa" placeholder="O que deseja encontrar?">
         </div>
 
-        <button class="botao__login">Login</button>
+        <button class="botao__login"><a href="login.html">Login</a></button>
         <img src="img/lupa__mobile.png" alt="Lupa de busca" class="lupa__mobile">
     </header>
     <main>
